--- a/section6-vidly/vidly/docker-compose.yml
+++ b/section6-vidly/vidly/docker-compose.yml
@@ -9,8 +9,12 @@ services:
         ports:
             - 3001:3001
         environment:
-            - DB_URL=mongodb://db/vidly
+            DB_URL: mongodb://db/vidly
     db:
         image: mongo:4.0-xenial
         ports:
             - 27017:27017
+        volumes:
+            - vidly:/data/db
+volumes:
+    vidly: 
